bannar section complite and main section start

--- a/index.html
+++ b/index.html
@@ -1,11 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <!-- google font's link here -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
+        rel="stylesheet">
+
+    <!-- css link here -->
+    <link rel="stylesheet" href="styles/index.css">
+
+    <title>Online Flower Shope</title>
 </head>
+
 <body>
+    <!-- bannar section start here -->
+    <header class="header">
+        <section class="bannar-area">
+            <div class="container">
+                <div class="bannar-contain">
+                    <div class="bannar-text">
+                        <h1 class="bannar-titel">Let's make beautiful flowers a part of your life.</h1>
+                        <p class="bannar-description">It is a long established fact that a reader will be distracted by
+                            the readable content of a page when looking at its layout. The point of using Lorem Ipsum is
+                            that it has a more-or-less normal distribution of letters.</p>
+                        <button class="btn">Shop Now</button>
+                    </div>
+                    <div class="bannar-img">
+                        <img src="images/pngwing 10.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
+    </header>
     
+    <!-- main section start here -->
+    <main>
+
+    </main>
 </body>
+
 </html>
