our featured flower section complite

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="container">
                 <div class="bannar-contain">
                     <div class="bannar-text">
-                        <h1 class="bannar-titel">Let's make beautiful flowers a part of your life.</h1>
+                        <h1 class="bannar-titel">Let's make <br> beautiful flowers a <br> part of your life.</h1>
                         <p class="bannar-description">It is a long established fact that a reader will be distracted by
                             the readable content of a page when looking at its layout. The point of using Lorem Ipsum is
                             that it has a more-or-less normal distribution of letters.</p>
@@ -37,10 +37,48 @@
             </div>
         </section>
     </header>
-    
+
     <!-- main section start here -->
     <main>
+        <!-- our-featured-flowers section start here -->
+        <section class="our-featured-flowers">
+            <div class="container">
+                <div class="featured-flowers">
+                        <h3 class="featured-flowers-titel">Our Featured Flowers</h3>
+                        <p class="featured-flowers-description">It is a long established fact that a reader will be
+                            distracted by the readable content of a page when looking at its layout.</p>
 
+                    <div class="flowers">
+                        <div class="flowers-item">
+                            <div class="item item-1">
+                                <img class="flower-img" src="images/pngwing 6.png">
+                            </div>
+                            <dir>
+                                <p class="item-name">Pink Flower Tree</p>
+                            </dir>
+                        </div>
+                        <div class="flowers-item">
+                            <div class="item item-2">
+                                <img class="flower-img-3" src="images/pngwing 5.png">
+                            </div>
+                            <dir>
+                                <p class="item-name">Pink Flower Tree</p>
+                            </dir>
+                        </div>
+                        <div class="flowers-item">
+                            <div class="item item-3">
+                                <img class="flower-img" src="images/pngwing 7.png">
+                            </div>
+                            <dir>
+                                <p class="item-name">Pink Flower Tree</p>
+                            </dir>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </section>
+        
     </main>
 </body>
 
