added our supports section

--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
         <section class="our-featured-flowers">
             <div class="container">
                 <div class="featured-flowers">
-                        <h3 class="featured-flowers-titel">Our Featured Flowers</h3>
-                        <p class="featured-flowers-description">It is a long established fact that a reader will be
-                            distracted by the readable content of a page when looking at its layout.</p>
+                    <h3 class="featured-flowers-titel">Our Featured Flowers</h3>
+                    <p class="featured-flowers-description">It is a long established fact that a reader will be
+                        distracted by the readable content of a page when looking at its layout.</p>
 
                     <div class="flowers">
                         <div class="flowers-item">
@@ -78,7 +78,28 @@
 
             </div>
         </section>
-        
+
+        <!-- our support section start here -->
+        <section class="our-supports">
+            <div class="container">
+                <div class="supports">
+                    <div>
+                        <img src="images/Group 57.png" alt="">
+                        <p class="sup-desciption">Same Day Delivery. Click & Collect.</p>
+                    </div>
+                    <div>
+                        <img src="images/Group 58.png" alt="">
+                        <p class="sup-desciption">Fresh Flowers. Local Growers.</p>
+                    </div>
+                    <div>
+                        <img src="images/Group 59.png" alt="">
+                        <p class="sup-desciption">24/7 Free Support.</p>
+                    </div>
+                    
+                </div>
+            </div>
+        </section>
+
     </main>
 </body>
 
