added hot deal section

--- a/index.html
+++ b/index.html
@@ -100,6 +100,23 @@
             </div>
         </section>
 
+        <!-- hot deal section start here -->
+        <section class="hot-deal">
+            <div class="container">
+                <div class="hot-deal-area">
+                    <div class="hot-deal-text">
+                        <h3 class="hot-deal-titel">Hot Deal ! Sale Up To 25% <span class="primary-color">Off</span></h3>
+                        <p class="hot-deal-description">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                        <button class="btn">Sign Up</button>
+                    </div>
+                    <div class="hot-deal-img">
+                        <img src="images/pngwing 8.png">
+                    </div>
+                </div>
+            </div>
+
+        </section>
+
     </main>
 </body>
 
