--- a/index.html
+++ b/index.html
@@ -117,6 +117,20 @@
 
         </section>
 
+        <!-- Instagram section start here -->
+        <section class="instagram">
+            <div class="container">
+                <h3 class="instagram-titel">Instagram</h3>
+                <p class="instagram-description">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                <div class="photos">
+                    <div><img src="images/Rectangle 3.png" alt=""></div>
+                    <div><img src="images/Rectangle 4.png" alt=""></div>
+                    <div><img src="images/Rectangle 5.png" alt=""></div>
+                    <div><img src="images/Rectangle 6.png" alt=""></div>
+                </div>
+            </div>
+        </section>
+
     </main>
 </body>
 
