latest deals section added

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                         <img src="images/Group 59.png" alt="">
                         <p class="sup-desciption">24/7 Free Support.</p>
                     </div>
-                    
+
                 </div>
             </div>
         </section>
@@ -106,7 +106,8 @@
                 <div class="hot-deal-area">
                     <div class="hot-deal-text">
                         <h3 class="hot-deal-titel">Hot Deal ! Sale Up To 25% <span class="primary-color">Off</span></h3>
-                        <p class="hot-deal-description">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                        <p class="hot-deal-description">It is a long established fact that a reader will be distracted
+                            by the readable content of a page when looking at its layout.</p>
                         <button class="btn">Sign Up</button>
                     </div>
                     <div class="hot-deal-img">
@@ -121,7 +122,8 @@
         <section class="instagram">
             <div class="container">
                 <h3 class="instagram-titel">Instagram</h3>
-                <p class="instagram-description">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                <p class="instagram-description">It is a long established fact that a reader will be distracted by the
+                    readable content of a page when looking at its layout.</p>
                 <div class="photos">
                     <div><img src="images/Rectangle 3.png" alt=""></div>
                     <div><img src="images/Rectangle 4.png" alt=""></div>
@@ -130,6 +132,21 @@
                 </div>
             </div>
         </section>
+
+        <!-- latest deals section start here -->
+        <section class="the-latest-deals">
+            <div class="container">
+                <div class="latest-deals">
+                    <div>
+                        <h3 class="latest-deals-title">Get The Latest Deals</h3>
+                        <p class="latest-deals-description">$30 coupon for first shopping</p>
+                        <input class="email" type="email" placeholder="Enter your email here....">
+                        <input  class="btn" type="submit" value="Subscrib">
+                    </div>
+                </div>
+            </div>
+        </section>
+
 
     </main>
 </body>
