added footer section

--- a/index.html
+++ b/index.html
@@ -141,14 +141,26 @@
                         <h3 class="latest-deals-title">Get The Latest Deals</h3>
                         <p class="latest-deals-description">$30 coupon for first shopping</p>
                         <input class="email" type="email" placeholder="Enter your email here....">
-                        <input  class="btn" type="submit" value="Subscrib">
+                        <input class="btn" type="submit" value="Subscrib">
                     </div>
                 </div>
             </div>
         </section>
-
-
     </main>
+
+    <!-- footer section start here -->
+    <footer class="footer">
+        <section class="container">
+            <div class="footer-text">
+                <div>
+                    <h3 class="footer-titel"><span class="primary-color">Flower</span>Shop</h3>
+                    <p class="footer-description">It is a long established fact that a reader will be distracted by the readable content of a page
+                        when looking at its layout.</p>
+                    <small class="copyright">@2020-2023, FlowerShop.com. All rights reserved. </small>
+                </div>
+            </div>
+        </section>
+    </footer>
 </body>
 
 </html>
