added best  selling section

--- a/index.html
+++ b/index.html
@@ -79,6 +79,8 @@
             </div>
         </section>
 
+
+
         <!-- our support section start here -->
         <section class="our-supports">
             <div class="container">
@@ -98,6 +100,29 @@
 
                 </div>
             </div>
+        </section>
+
+        <!-- top sale flowers -->
+        <section class="top-sale">
+            <div class="container">
+                <div class="top-sale-flowers">
+                    <h3 class="top-sale-titel"><span class="primary-color">Best</span> Selling Flowers</h3>
+                    <div class="top-sale-item">
+                        <div class="top-sale-img">
+                            <img class="img" src="images/topsell/09.jpg">
+                            <img class="img" src="images/topsell/10.jpg">
+                        </div>
+                        <div class="top-sale-video">
+                            <video loop muted autoplay src="images/topsell/video.mp4"></video>
+                        </div>
+                        <div class="top-sale-img">
+                            <img class="img" src="images/topsell/15.jpeg">
+                            <img class="img" src="images/topsell/16.jpeg">
+                        </div>
+                    </div>
+                </div>
+            </div>
+
         </section>
 
         <!-- hot deal section start here -->
@@ -154,7 +179,8 @@
             <div class="footer-text">
                 <div>
                     <h3 class="footer-titel"><span class="primary-color">Flower</span>Shop</h3>
-                    <p class="footer-description">It is a long established fact that a reader will be distracted by the readable content of a page
+                    <p class="footer-description">It is a long established fact that a reader will be distracted by the
+                        readable content of a page
                         when looking at its layout.</p>
                     <small class="copyright">@2020-2023, FlowerShop.com. All rights reserved. </small>
                 </div>
